Update Experience and Recognition

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "Jeff Anderson's Resume"
-description: "Jeff Anderson's Resume"
+title: "Jeff Anderson's Work-In-Progress Resume"
+description: "Jeff Anderson's Work-In-Progress Resume"
 
 # Build settings
 markdown: kramdown
@@ -23,7 +23,7 @@ resume_contact_address:         ""
 resume_header_contact_info:     ""
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>Software Engineer</p>"
+resume_header_intro: "<p>This resume is an MVP.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -36,8 +36,8 @@ resume_header_intro: "<p>Software Engineer</p>"
 resume_section_experience:      true
 resume_section_education:       true
 # resume_section_projects:        true
-resume_section_skills:          true
-# resume_section_recognition:     true
+# resume_section_skills:          true
+resume_section_recognition:     true
 # resume_section_links:           true
 # resume_section_associations:    true
 # resume_section_interests:       true
