--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,10 @@
 # Recognitions
-- award: Outstanding Achievement
-  organization: Springfield Young Professionals
-  year: 2010, 2014
-  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
+- award: Best in Technology Award
+  organization: The Home Depot
+  year: 2018
+  summary: Best in Delivering the Orange Promise
 
-- award: Most Likely To Succeed
-  organization: Springfield High School
-  year: 2004
-  summary: Voted Most Likely To Succeed by a panel of my high school peers.
+- award: Game of Code Winner
+  organization: The Home Depot
+  year: 2006
+  summary: Won the 'Game of Code' for delivering a homedepot.com integration for the Rental line of business
