small changes in experience and skills

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -13,7 +13,7 @@
   description: Jenkins
 
 - skill: Monitoring / Logging Tools
-  description: Grafana, Prometheus, Zabbix
+  description: CloudWatch, Grafana, Prometheus, Zabbix
 
 - skill: Source Control Management
   description: GIT, GitHub, Bitbucket
