--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -26,6 +26,7 @@
   description: <ul class="resume-item-list">
     <li>HTML/CSS;</li>
     <li>JavaScript, TypeScript;</li>
+    <li>Python;</li>
     <li>PHP;</li>
     <li>Bootstrap, Wordpress;</li>
     <li>Bash scripting.</li>
