--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,6 +1,5 @@
-# Associations
-# comment out the urls if you do not wish to display them
+- organization: 'Polish- native'
+  summary:
 
-- organization: 'Polish - native'
 - organization: 'English - intermediate'
-
+  summary:
