--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,4 @@
 # Interests
-- description: New Technologys
+- description: New Technologies
 - description: Motorcycles
 - description: Bodybuilding/Fitness
