--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -11,4 +11,4 @@
 - company: Open Finance SA, Poland, Warsaw
   position: Junior PHP developer
   duration:   November, 2015  &mdash; September, 2016
-  summary: Design and implementation of a model for generating bank documents in the Application. "Credit Applications Generator" in PHP and PostgreSQL.
+  summary: Designing and implementing of a model for generating bank documents in the Application. "Credit Applications Generator" in PHP and PostgreSQL.
