project description added

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,5 +1,6 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
+# in case you don't have any images for the project, use the placeholder.jpg file
 
 # jazznotes.io
 - project: jazznotes.io
