--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -8,7 +8,7 @@
   duration: 2012 &mdash; Present
   # url: "#"
   description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
-  image_path: "images/placeholder.jpg"
+  image_path: "images/placeholder.png"
   image_name: "placeholder"
 
 # Springfield Community Outreach Group
