--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Dorian Dinh Xuan"
-resume_title:                   "Cloud DevOps Engineer"
+resume_title:                   "AWS Cloud Engineer"
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "dorian.dinhxuan@gmail.com"
