Added small fix

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -32,7 +32,7 @@
   description_4: [CodeCommit]
 
 - skill: Operating Systems
-  description_1: [Linux]
+  description_1: [Cetnos7]
   description_2: [Ubuntu]
   description_4: [Amazon Linux 2]
 
