Updates to experience, education and interests

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,7 +3,7 @@
 - company: Presidio Networked Solutions
   position: Senior Engineer, Collaboration
   duration: April 2015 &mdash; Present
-  summary: Lead engineering of many large projects such with the following technologies<ul class="resume-item-list"><li>Unified Communications</li><li>Security including Palo Alto and ASA deployment</li><li>WAN and LAN Routing</li><li>Switching</li></ul>
+  summary: Lead engineer of many large projects with the following technologies<ul class="resume-item-list"><li>Unified Communications</li><li>Security including Palo Alto and ASA deployment</li><li>WAN and LAN Routing and Switching</li></ul>
 
 # Director of Digital Stratgy
 - company: MetLife
@@ -17,4 +17,4 @@
 - company: Under Armour
   position: Senior Network Engineer
   duration:  December 2005  &mdash; April 2014
-  summary: Provided network architecture, operations leadership and capacity planning for Under Armour’s global telecommunications services encompassing data, security and wireless functions supporting 6000+ teammates across 120+ global locations in the areas of retail, manufacturing, distribution, and office operations. Driven to provide scalable network solutions designed specifically to meet Under Armour’s business objectives. •	Primary voice architect responsible for 3 global clusters in Europe, North America and Asia/Pac areas. This includes Unified Communications Manager, Unity Connection, IM and Presence and Unified Contact Center Express version 7 and 9 running on UCS environments with CME/SRST at remote locations. On 5 separate occasions during my career I was project lead for entire cluster upgrades.
+  summary: Provided network architecture, operations leadership and capacity planning for Under Armour’s global telecommunications services encompassing data, security unified communications, contact center, and wireless functions supporting 6000+ teammates across 120+ global locations in the areas of retail, manufacturing, distribution, and office operations.
