Updates to experience and education

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -10,3 +10,10 @@
   year: 1995
   award: 
   summary: 
+
+  uni: Cisco Certified Network Professional Voice
+  uni: Cisco Certified Network Professional
+  uni: Cisco Certified Design Professional
+  uni: Cisco Meraki CMNA
+  uni: Palo Alto ACE, PCNSE 6
+  uni: F5 Certified BIG-IP Administrator
