--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,4 @@
 # Interests
-- description: Rock Climbing, specifically the practice of Bouldering
-- description: Music Creation using teenage engineering synthesizers and a Fender Strat 
-- description: Mountain Biking, I got to get outdoors with my Cannondale Trail SL-4
+- description: Rock climbing, specifically the practice of Bouldering
+- description: Music creation using teenage engineering synthesizers and a Fender Strat 
+- description: Mountain biking, I got to get outdoors with my Cannondale Trail SL-4
