--- a/_data/education.yml
+++ b/_data/education.yml
@@ -11,9 +11,9 @@
   award: 
   summary: 
 
-  uni: Cisco Certified Network Professional Voice
-  uni: Cisco Certified Network Professional
-  uni: Cisco Certified Design Professional
-  uni: Cisco Meraki CMNA
-  uni: Palo Alto ACE, PCNSE 6
-  uni: F5 Certified BIG-IP Administrator
+  cert: Cisco Certified Network Professional Voice
+  cert: Cisco Certified Network Professional
+  cert: Cisco Certified Design Professional
+  cert: Cisco Meraki CMNA
+  cert: Palo Alto ACE, PCNSE 6
+  cert: F5 Certified BIG-IP Administrator
