Updates to html format

--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ resume_contact_email:           "nick_the_engineer@atomictinker.com"
 resume_contact_telephone:       "410-541-6232"
 resume_contact_address:         "4309 Samantha Dr, Raleigh, NC"
 
-resume_header_contact_info:     "4309 Samantha Dr, Raleigh, NC • 410-541-6232 • nick_the_engineer@atomictinker.com"
-display_header_contact_info:    "false"
+resume_header_contact_info:     "Raleigh, NC • +14105416232 • nick_the_engineer@atomictinker.com"
+display_header_contact_info:    "true"
 
 resume_header_intro: "<p>Architect/engineer with 15+ years experience in network, collaboration and software development space. A strong problem solver recognized for dedication and attention to detail to complete project on time and deliver effective goal oriented results.</p>"
 
