--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,18 @@
 # Jobs
-# VP of Global Communications
+# Senior Engineer, Collaboration
 - company: Presidio Networked Solutions
   position: Senior Engineer, Collaboration
   duration: April 2015 &mdash; Present
   summary: Lead engineer of many large projects with the following technologies<ul class="resume-item-list"><li>Unified Communications</li><li>Security including Palo Alto and ASA deployment</li><li>WAN and LAN Routing and Switching</li></ul>
 
-# Director of Digital Stratgy
+# Senior Network Engineer
 - company: MetLife
   position: Senior Network Engineer
   duration: April 2015 &mdash; April 2014
   summary: <ul class="resume-item-list"><li>Project lead for Cyprus LAN/WAN redesign, connecting Cyprus up to Frankfurt with VPN and installing new layer 3 switch.</li><li>Project lead for DMVPN solution that provides redundant paths from European sites up to hub locations for email and internet access.</li><li>Network project lead for European Office 365 WAN connections, designed connectivity, sized WAN connections and ordered equipment.</li><li>Project lead to fix DMVPN connecting Colombia, Mexico and NA data centers, removed all static route and implemented EIGRP across the WAN.</li></ul>
 
 
-
-# Communications Coordinator
+# Senior Network Engineer
 - company: Under Armour
   position: Senior Network Engineer
   duration:  December 2005  &mdash; April 2014
