Updates to html format

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Nick Becker resume"
+title: "Nick Becker CV"
 description: "A resume template for Jekyll and GitHub Pages sites."
 
 # Build settings
