--- a/_data/education.yml
+++ b/_data/education.yml
@@ -12,9 +12,9 @@
   summary: 
 
 # Certification
-- cert: Cisco Certified Network Professional Voice
-- cert: Cisco Certified Network Professional
-- cert: Cisco Certified Design Professional
-- cert: Cisco Meraki CMNA
-- cert: Palo Alto ACE, PCNSE 6
-- cert: F5 Certified BIG-IP Administrator
+  cert: Cisco Certified Network Professional Voice
+  cert: Cisco Certified Network Professional
+  cert: Cisco Certified Design Professional
+  cert: Cisco Meraki CMNA
+  cert: Palo Alto ACE, PCNSE 6
+  cert: F5 Certified BIG-IP Administrator
