Updates to education

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,4 +1,4 @@
---- # Degree
+# Degree
 - degree: Bachelor of Science, Information Technology
   uni: University of Phoenix
   year: 2006
@@ -11,11 +11,10 @@
   award: 
   summary: 
 
---- # Certification
-certs:
-  - cert: Cisco Certified Network Professional Voice
-  - cert: Cisco Certified Network Professional
-  - cert: Cisco Certified Design Professional
-  - cert: Cisco Meraki CMNA
-  - cert: Palo Alto ACE, PCNSE 6
-  - cert: F5 Certified BIG-IP Administrator
+- certs:
+  cert: Cisco Certified Network Professional Voice
+  cert: Cisco Certified Network Professional
+  cert: Cisco Certified Design Professional
+  cert: Cisco Meraki CMNA
+  cert: Palo Alto ACE, PCNSE 6
+  cert: F5 Certified BIG-IP Administrator
