Adicionando dados no curriculo

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -17,3 +17,9 @@
   position: Communications Coordinator
   duration:   Jun, 2008  &mdash; May, 2010
   summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+
+
+- company: CIBiogás
+  position: Computer Science Intern
+  duration:   Mar, 2016  &mdash; Mar, 2017
+  summary: Analysis and systems development; Assist in the preparation and control of technical documentation; Track project development. IoT research of the effects of the Photovoltaic Distributed Generation on Electricity Distribution System in Brazil.
