--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,22 +1,22 @@
 # Jobs
 # VP of Global Communications
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+- company: Full Stack Developer
+  position: MS Bank - S.A. Banco de Câmbio
+  duration: Feb, 2018 &mdash; Present
+  summary: Development of high-risk banking APIs for third-party customers.Development of a OAuth2 system for multiple resources(Internal and External Systems).Hybrid Mobile development(Flutter and Ionic).Wide use of various technologies (php, node, mysql, rabbitmq, shell script, js, dart and others)
 
 # Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
+- company: Deltoro
+  position: Lead Product Developer & IT Consultor
+  duration:  Jun, 2019 &mdash; Present
+  summary: Product development and IT Infrastructure and security management.
 
 
 # Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+- company: Centro Latino Americano de Tecnologias Abertas
+  position: Research
+  duration:   Apr, 2017  &mdash; Apr, 2018
+  summary: Signal quality studies of LoraWan technology, RFID technology, and automation technologies. Implementation of high power and low cost transmission prototypes.
 
 
 - company: CIBiogás
