Adicionando dados no curriculo

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,16 @@
 # Skills
 # Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
+- skill: Programing Languages
+  description: Ruby, PHP, Dart, Javascript, Typescript and Crystal
 
 # Communications strategy
-- skill: Communications strategy
-  description: Content and marketing strategy,
+- skill: Frameworks
+  description: Ruby On Rails, Slim, Hanami, Fluter and Ionic(angular)
 
 # Digital content development and creation
-- skill: Digital content development and creation
-  description: Copy writing, graphic design, web design, front-end web development, print design
+- skill: Others
+  description:  GIT Version control, CI/CD, mysql, docker, rabbitmq, OAuth2 and some others.
+
+- skill: Language
+  description:  English, Portuguese, Spanish and Libras(Brazilian Signal Language)
+
