--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,7 @@
 # Jobs
 # VP of Global Communications
-- company: Full Stack Developer
-  position: MS Bank - S.A. Banco de Câmbio
+- company: MS Bank - S.A. Banco de Câmbio
+  position: Full Stack Developer
   duration:  Feb, 2018 &mdash; Present
   summary: Development of high-risk banking APIs for third-party customers.Development of a OAuth2 system for multiple resources(Internal and External Systems).Hybrid Mobile development(Flutter and Ionic).Wide use of various technologies (php, node, mysql, rabbitmq, shell script, js, dart and others)
 
