--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,12 @@
 # Recognitions
-- award: Outstanding Achievement
-  organization: Springfield Young Professionals
-  year: 2010, 2014
-  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
 
-- award: Most Likely To Succeed
-  organization: Springfield High School
-  year: 2004
-  summary: Voted Most Likely To Succeed by a panel of my high school peers.
+- award: Covid 19 Nasa Space Apps
+  organization: Nasa
+  year: 2020
+  summary: In special appreciation for efforts to address COVID-19-related challenges.
+
+
+- award: Hackatour
+  year: 2019
+  summary: Programming 48-hour marathon. Fourth edition of the pioneering tourism innovation event. 1º Placed with the presentation of the chatbot with artificial intelligence nAIpi.
+
