Adicionando dados no curriculo

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -14,7 +14,7 @@
 
 # Communications Coordinator
 - company: Centro Latino Americano de Tecnologias Abertas
-  position: Research
+  position: Researcher
   duration:   Apr, 2017  &mdash; Apr, 2018
   summary: Signal quality studies of LoraWan technology, RFID technology, and automation technologies. Implementation of high power and low cost transmission prototypes.
 
