--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -22,7 +22,7 @@
   description: SmStudy of factors that could make feasible or impossible to implement a system of Radio Frequency Identification or RFID (Radio-Frequency Identification) in inventory items. Human resources were allocated for research from the Latin American Center for Open Technologies - CELTAB, in agreement with ITAIPU BINACIONAL, where a total of 1 (one) researcher was stipulated in the bibliographic and state of the art technology research phase. RFID. Free technologies are a powerful Research and Development tool and potential generator of solutions to the needs of Itaipu Binacional, as well as an input for the formation of new ventures. The researcher's initial activities were to delimit the scope of the project according to the needs of ITAIPU.
 
 
-- project: System for Connecting Microgenerators to the Electricity Distribution Network to Enable Virtual Power Plants
+- project: Virtual Power Plants
   role: Researcher
   duration: 2015 &mdash; 2017
   # url: "#"
