--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -9,7 +9,7 @@
 
 # Digital content development and creation
 - skill: Others
-  description:  GIT Version control, CI/CD, mysql, docker, rabbitmq, OAuth2 and some others.
+  description:  GIT Version control, CI/CD, mysql, docker, rabbitmq, OAuth2 and some others
 
 - skill: Language
   description:  English, Portuguese, Spanish and Libras(Brazilian Signal Language)
